--- a/picom.conf
+++ b/picom.conf
@@ -8,22 +8,22 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 6;
+#shadow-radius = 6;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+#shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+#shadow-offset-y = -7;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -43,13 +43,13 @@ shadow-offset-y = -7;
 #   shadow-exclude = "n:e:Notification";
 #
 # shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+#shadow-exclude = [
+#  "name = 'Notification'",
+#  "class_g = 'Conky'",
+#  "class_g ?= 'Notify-osd'",
+#  "class_g = 'Cairo-clock'",
+#  "_GTK_FRAME_EXTENTS@:c"
+#];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
@@ -83,14 +83,14 @@ fade-in-step = 0.03;
 # fade-out-step = 0.03
 fade-out-step = 0.03;
 
-# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
+# The TIME between steps in fade step, in milliseconds. (> 0, defaults to 10)
 fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = false
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -114,7 +114,7 @@ frame-opacity = 0.9;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 inactive-dim = 0.2
@@ -143,7 +143,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 18
+corner-radius = 16
 
 # Exclude conditions for rounded corners.
 #rounded-corners-exclude = [
@@ -333,7 +333,7 @@ use-damage = true;
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+xrender-sync-fence = true
 
 # GLX backend: Use specified GLSL fragment shader for rendering window
 # contents. Read the man page for a detailed explanation of the interface.
